# LogCenter

./: .env  .gitignore  LogCenter.sln  LogCenter.slnx  README-aspnet.md  README.md  docker-compose-dev.yml  docker-compose.yml  start.sh
HTTP Requests/: Authentication.http  HttpRequest Test.yml  http-client.env.json  opencollection.yml  teste.http
HTTP Requests/environments/: dev.yml
Pypi/Logger/: LogCenterLogger.py  LogLevel.py  README.md
client/: .env  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
examples/aspnet/: Program.cs  WeatherForecast.cs  appsettings.Development.json  aspnet_example.csproj  aspnet_example.http
examples/dotnet/: Logger.cs  Program.cs  dotnet_example.csproj
examples/fastapi/: main.py  middleware.py
examples/python/: main.py
fake/: Program.cs  fake.csproj
nuget/: LogCenterProvider.cs  LogCenterSink .cs  LogCenterSinkExtensions.cs  LogCenterSinkOptions.cs  LoggerConfig.cs
nuget/Logger/: ILogger.cs  LogCenterLogger.cs  LogCenterOptions.cs  LogLevel.cs  LogQueue.cs
nuget/RequestLogger/: InterceptorMiddleware.cs  InterceptorOptions.cs  Request.cs  RequestLogger.csproj  (+1 more)
server/: Dockerfile  Program.cs  server.csproj
src/libs/Pypi/Logger/: README.md  pyproject.toml
src/libs/Pypi/Logger/src/LogCenter/: LogCenterLogger.py  LogCenterOptions.py  LogLevel.py
src/libs/Pypi/RequestLogger/: README.md  pyproject.toml
src/libs/Pypi/RequestLogger/src/LogCenterInterceptor/: InterceptorMiddleware.py  InterceptorOptions.py  LoggerFactory.py  __init__.py
tests/: Host.cs  IntegrationTests.cs  tests.csproj
(+123 files in other folders)
