[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LogCenter"
version = "0.1.5"
description = "This lib will help you to send your app's logs to LogCenter."
authors = [{ name = "Hudson Ventura", email = "hudsonventura@outlook.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["python-dateutil", "uuid", "requests"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hudsonventura/LogCenter"
"Bug Tracker" = "https://github.com/hudsonventura/LogCenter/issues"
